--- a/components/Avatar/Avatar.module.scss
+++ b/components/Avatar/Avatar.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   border-radius: 50%;
   background-size: cover;
+  margin-bottom: 20px;
 }
 
 .avatarBorder {
@@ -16,4 +17,13 @@
 .border {
   position: relative;
   z-index: 1;
+}
+
+.emptyAvatar {
+  background-color: #e0e0e0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: 700;
 }
